
_____________________________________________________________________________________________________


CFDWARP CHANGELOG

_____________________________________________________________________________________________________


2018 NOV 21a
   * in bin/noh2D.wrp
     - added PredictorCorrection module within Cycle


2018 NOV 19a
   * in cycle/resconv/_MUSCL+/resconv.c
     - renamed FLUX_FDSplusgen to FLUX_FDSplusMultiD
   * in bin/*wrp
     - renamed FLUX_FDSplusgen to FLUX_FDSplusMultiD
   

2018 NOV 18b
   * in bin/noh3D.wrp
     - changed aref and zetaA2
   * in bin
     - added noh2D.wrp


2018 NOV 18a
   * in bin
     - updated noh3D.wrp


2018 NOV 13a
   * in bin
     - renamed taylor_green_vortex.wrp to taylor_green_vortex_2.wrp
     - added taylor_green_vortex from Prasanna
     - added noh3D.wrp testcase
   * in CONTRIB
     - added taylor_green_vortex.wrp case by Prasanna
 

2018 NOV 10c
   * in tools/gitnewversion_public.sh
     - fixed a bug with git pull: needed to remove all directories within $warppublic first


2018 NOV 10b
   * in tools/gitnewversion_public.sh
     - fixed a bug with git pull: need to do a git checkout master and git reset --hard first


2018 NOV 10a
   * in bin/ns_SDBD.wrp
     - made modifications


2018 NOV 04a
   * moved model/fluid/doc/Plasma_Model2 to model/fluid/doc/Plasma_Model
   * in model/fluid/doc/Transport_Equations/report.tex
     - made changes to incorporate latest version of the non-stiff plasma model
       (with betag and betaa instead of betaplus and betaminus)
   * in model/thermo/doc/report.tex
     - fixed bug \begin{table*}[|t] should be \begin{table*}[t]


2018 NOV 03a
   * in model/fluid/_drift-diffusion/fluid.c 
     - in find_Dstar(), added electric field term
   * in model/fluid/_*_plasma/fluid_plasma.c
     - in find_Dstar(), added electric field term
   * in model/fluid/doc/Plasma_Model2/report.tex
     - added second possibility for matrix D


2018 NOV 01b
   * renamed 
     - betaminus -> betaa