@@ -1105,7 +1105,7 @@ static void find_Lambda_minus_plus_FDSplus_muscl(np_t *np, gl_t *gl, long lp0, l
 
 
 
-void convert_Fstar_interface_positivity_preserving(np_t *np, gl_t *gl, long lp0, long theta, metrics_t metrics, long numiter, int EIGENVALCOND, flux_t Fint, flux_t Fpositive, sqmat_t lambdaminus, sqmat_t lambdaplus){
+void filter_Fstar_interface_positivity_preserving_MultiD(np_t *np, gl_t *gl, long lp0, long theta, metrics_t metrics, long numiter, int EIGENVALCOND, flux_t Fint, flux_t Fpositive, sqmat_t lambdaminus, sqmat_t lambdaplus){
 
   flux_t MUp0,MUp1,Up0,Up1,Vp1,Vp0;
   sqmat_t Mp0,Mp1,Minvp0,Minvp1;
@@ -1191,6 +1191,93 @@ void convert_Fstar_interface_positivity_preserving(np_t *np, gl_t *gl, long lp0,
 
 }
 
+
+
+void filter_Fstar_interface_positivity_preserving(np_t *np, gl_t *gl, long lp0, long theta, metrics_t metrics, long numiter, int EIGENVALCOND, flux_t Fint, flux_t Fpositive, sqmat_t lambdaminus, sqmat_t lambdaplus){
+
+  flux_t LUp0,LUp1,Up0,Up1,Vp1,Vp0;
+  sqmat_t Lp0,Lp1,Linvp0,Linvp1;
+  flux_t fluxtmp2,fluxtmp,fluxtmp3,Fp0,Fp1;
+  sqmat_t Yminus,Yplus,Zminus,Zplus;
+  long flux,cnt,lp1;
+  jacvars_t jacvarsp0, jacvarsp1;
+
+  lp1=_al(gl,lp0,theta,+1);
+
+  find_jacvars(np[lp0],gl,metrics,theta,&jacvarsp0);
+  find_jacvars(np[lp1],gl,metrics,theta,&jacvarsp1);
+
+  find_L_from_jacvars(jacvarsp0, metrics, Lp0);
+  find_L_from_jacvars(jacvarsp1, metrics, Lp1);
+  find_Linv_from_jacvars(jacvarsp0, metrics, Linvp0);
+  find_Linv_from_jacvars(jacvarsp1, metrics, Linvp1);
+
+  find_Ustar_from_jacvars(jacvarsp0,  metrics, Up0);
+  find_LUstar_from_jacvars(jacvarsp0, metrics, LUp0);
+  find_Ustar_from_jacvars(jacvarsp1,  metrics, Up1);
+  find_LUstar_from_jacvars(jacvarsp1, metrics, LUp1);
+
+  multiply_matrix_and_vector(Lp0,Fint,fluxtmp2);
+  for (flux=0; flux<nf; flux++) Vp0[flux]=fluxtmp2[flux]/LUp0[flux];
+
+  for (flux=0; flux<nf; flux++) Vp1[flux]=0.0;
+
+  set_matrix_to_zero(lambdaminus);
+  set_matrix_to_zero(lambdaplus);
+  set_matrix_to_zero(Yminus);
+  set_matrix_to_zero(Yplus);
+  set_matrix_to_zero(Zminus);
+  set_matrix_to_zero(Zplus);
+    
+  for (flux=0; flux<nf; flux++) {
+    Yminus[flux][flux]=min(0.0, Vp0[flux] );
+    Yplus[flux][flux]=max(0.0, Vp0[flux] );
+    Zminus[flux][flux]=min(0.0, Vp1[flux] );
+    Zplus[flux][flux]=max(0.0, Vp1[flux] );
+  }
+
+  for (cnt=0; cnt<numiter; cnt++){
+    multiply_matrix_and_vector(Zplus,LUp1,fluxtmp2);
+    multiply_matrix_and_vector(Linvp1,fluxtmp2,fluxtmp);
+    multiply_matrix_and_vector(Lp0,fluxtmp,fluxtmp2);
+    multiply_matrix_and_vector(Yminus,LUp0,fluxtmp3);
+    multiply_matrix_and_vector(Linvp0,fluxtmp3,fluxtmp);
+    multiply_matrix_and_vector(Lp1,fluxtmp,fluxtmp3);
+    for (flux=0; flux<nf; flux++) {
+      Yminus[flux][flux]=min(0.0, Yplus[flux][flux]+fluxtmp2[flux]/notzero(LUp0[flux],1e-99));
+      Zplus[flux][flux]=max(0.0, Zminus[flux][flux]+fluxtmp3[flux]/notzero(LUp1[flux],1e-99));
+    }
+    for (flux=0; flux<nf; flux++) {
+      Yplus[flux][flux]=max(0.0, Yplus[flux][flux]+fluxtmp2[flux]/notzero(LUp0[flux],1e-99));
+      Zminus[flux][flux]=min(0.0, Zminus[flux][flux]+fluxtmp3[flux]/notzero(LUp1[flux],1e-99));
+    }   
+  }
+
+  for (flux=0; flux<nf; flux++) {
+    lambdaplus[flux][flux]=Yplus[flux][flux]+Zplus[flux][flux];///LUp0[flux]*LUp1[flux];
+    lambdaminus[flux][flux]=Zminus[flux][flux]+Yminus[flux][flux];///LUp1[flux]*LUp0[flux];
+  }
+
+#ifndef _RESCONV_LAMBDA_ABSOLUTE_CONDITIONING
+  condition_Lambda_plus_minus(np, gl, lp0, theta, jacvarsp0, jacvarsp1, metrics, EIGENVALCOND, lambdaplus,lambdaminus);
+#endif
+
+#if (CONVJACOBIAN==CONVJACOBIAN_FROMFLUXEIGENVALUES)
+  for (flux=0; flux<nf; flux++){  
+    np[lp0].bs->Lambdaplus[theta][flux]=lambdaplus[flux][flux];
+    np[lp1].bs->Lambdaminus[theta][flux]=lambdaminus[flux][flux];
+  }
+#endif
+
+  multiply_diagonal_matrix_and_vector(lambdaplus,LUp0,fluxtmp2);
+  multiply_matrix_and_vector(Linvp0,fluxtmp2,Fp0);
+
+  multiply_diagonal_matrix_and_vector(lambdaminus,LUp1,fluxtmp2);
+  multiply_matrix_and_vector(Linvp1,fluxtmp2,Fp1);
+
+  for (flux=0; flux<nf; flux++) Fpositive[flux]=Fp0[flux]+Fp1[flux];
+
+}
 
 
 void find_Fstar_interface_FDSplus_muscl(np_t *np, gl_t *gl, long lm1h, long lp1h, long theta, 
